--- a/css/index.css
+++ b/css/index.css
@@ -11,10 +11,14 @@ body {
     height: 100%;
 }
 
+html {
+    height: 100%;
+}
+
 .bg {
     background-position: center center;
 	background-repeat: no-repeat;
-	background-attachment: fixed;
+    background-attachment: fixed;
     background-size: cover;
     background-color: #343538;
 }
