--- a/css/index.css
+++ b/css/index.css
@@ -8,7 +8,16 @@ https://github.com/aidswidjaja
 html, body {
     margin: 0;
     padding: 0;
-    height: 100vh;
+    height: 100%;
+}
+
+html {
+    overflow: hidden;
+}
+
+body {
+    overflow: auto;
+    -webkit-overflow-scrolling: touch;
 }
 
 .bg {
