B-#12/3-PATCH: A11 wth this isnt working

--- a/css/index.css
+++ b/css/index.css
@@ -97,6 +97,7 @@ and the filepath is relative to the current directory. See README (Development N
 }
 .bg11 {
     background-image: url(../res/juu-ichi.jpg) !important;  
+    background-color: papayawhip !important;  
 	color: #ffffff !important;
 }
 .bg12 {
