--- a/css/index.css
+++ b/css/index.css
@@ -36,6 +36,9 @@ body {
 https://codepen.io/theiwaz/pen/vybjc
 See issue #2 and #12 on GitHub (aidswidjaja/Lively)
 Android/Chromium bugs: https://issuetracker.google.com/issues/36908439, https://bugs.chromium.org/p/chromium/issues/detail?id=344338
+
+and the solution used here:
+https://css-tricks.com/forums/topic/full-page-backgrounds-on-ios-background-size-cover/page/2/#post-134002
 */
 
 /* 
