--- a/css/index.css
+++ b/css/index.css
@@ -44,6 +44,18 @@ body {
     text-align: center;
 }
 
+#splashmobile {
+    background: rgba(52, 58, 64, 0.7);
+    height: 100%;
+    width: 100%;
+    text-align: left;
+}
+
+#splashmobiletext {
+    text-align: left;
+    color: #ffffff
+}
+
 #splashbutton {
     margin: 0 auto;
     text-align: center;
@@ -67,6 +79,8 @@ Android/Chromium bugs: https://issuetracker.google.com/issues/36908439, https://
 
 and the solution used here:
 https://css-tricks.com/forums/topic/full-page-backgrounds-on-ios-background-size-cover/page/2/#post-134002
+
+Also see: https://bugs.chromium.org/p/chromium/issues/detail?id=175502, https://bugs.webkit.org/show_bug.cgi?id=153852
 
 REMINDER: Use `../res/filenamehere.jpg` as this stylesheet is stored within the `css` directory,
 and the filepath is relative to the current directory. See README (Development Notes) for more information.
