--- a/css/index.css
+++ b/css/index.css
@@ -45,8 +45,8 @@ body {
 
 #splashmobile {
     background: rgba(52, 58, 64, 0.7);
-    height: 100%;
-    width: 100%;
+    height: 100vh; /* maintains compatibility with mobile devices with address bars */
+    width: 100%; /* maintains compatibility with Navbar and desktop scroll bars */
     text-align: left;
 }
 
