--- a/css/index.css
+++ b/css/index.css
@@ -154,7 +154,11 @@ h1, .display-4 {
 }
 
 .cardteam {
-    border-radius: 5%
+    border-radius: 5%;
+}
+
+.teamdiv {
+    margin: 0px;
 }
 
 .btn-index {
@@ -208,6 +212,10 @@ h1, .display-4 {
 
 .flex-item {
     margin: 100px;
+}
+
+.team-flex-item {
+    margin: 50px;
 }
 
 /* Misc */
