--- a/css/index.css
+++ b/css/index.css
@@ -201,6 +201,14 @@ h1, .display-4 {
     color: #343A40;
     text-align: center;
     margin: 5px;
+    font-size: 40px;
+}
+
+.teamrole {
+    color: #343A40;
+    text-align: center;
+    margin: 5px;
+    font-size: 25px;
 }
 
 .flex-item {
