--- a/css/index.css
+++ b/css/index.css
@@ -241,6 +241,13 @@ h1, .display-4 {
     padding: 75px;
 }
 
+@media (min-width:480px)  { 
+    .indexcontainer {
+        margin-top: 50px;
+        padding: 15px;
+    }
+}
+
 .indexrow {
     width: auto;
 }
