--- a/css/index.css
+++ b/css/index.css
@@ -241,7 +241,7 @@ h1, .display-4 {
     padding: 75px;
 }
 
-@media (min-width:480px)  { 
+@media (max-width:480px)  { 
     .indexcontainer {
         margin-top: 50px;
         padding: 15px;
